fixed scrollbar

--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -1,15 +1,14 @@
-#scrollbar::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 4px;
     background-color: aqua;
-
 }
 
-#scrollbar::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #3f51b5;
 }
 
 
-#scrollbar::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
 }
